--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@radix-ui/colors": "^0.1.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
@@ -21,6 +23,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "7.11.0",
