--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/colors": "^0.1.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
